# Streamlit-Housing-Regression

./: .gitattributes  README.rst  pyproject.toml
housing_regression/: app.py
housing_regression/assets/bronx/: clean_dropped.pickle  placeholder.pickle  regressor.pickle  stats.pickle
housing_regression/assets/brooklyn/: clean_dropped.pickle  placeholder.pickle  regressor.pickle  stats.pickle
housing_regression/assets/manhattan/: clean_dropped.pickle  placeholder.pickle  regressor.pickle  stats.pickle
housing_regression/assets/queens/: placeholder.pickle  regressor.pickle  stats.pickle
housing_regression/assets/statenisland/: clean_dropped.pickle  placeholder.pickle  regressor.pickle  stats.pickle
